# calculator-mcp-server

./: README.md  calculator_server.py  pyproject.toml
src/calculator_mcp_server/: __init__.py
tests/: conftest.py  test_basic_math.py  test_error_handling.py  test_integration.py  test_matrices.py  test_mcp_protocol.py  test_performance.py  test_plotting.py  test_security.py  test_server_initialization.py  test_statistics.py  test_tool_discovery.py  test_transport_layer.py  test_vectors.py
