[project]
name = "calculator-mcp-server"
version = "2.0.2"
description = "A server for complex mathematical calculations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "sympy>=1.13.0",
    "matplotlib",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[project.scripts]
calculator-mcp-server = "calculator_mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = ["x"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"